2010-10-23 Andreas Radke <andyrtr at archlinux.org>

        * 3.3.0-OOO330_m12-1 :
	- new snapshot; RC2

2010-10-16 Andreas Radke <andyrtr at archlinux.org>

        * 3.3.0-OOO330_m11-1 :
	- new snapshot; RC1

2010-10-12 Andreas Radke <andyrtr at archlinux.org>

        * 3.3.0-OOO330_m10-1 :
	- new snapshot
	- add a buildfix to compile with recent redland/rasqal

2010-09-29 Andreas Radke <andyrtr at archlinux.org>

        * 3.3.0-OOO330_m9-1 :
	- new snapshot

2010-09-11 Andreas Radke <andyrtr at archlinux.org>

        * 3.3.0-OOO330_m7-1 :
	- new snapshot

2010-09-01 Andreas Radke <andyrtr at archlinux.org>

        * 3.3.0-OOO330_m6-1 :
	- new snapshot
	- move addional sources into src array for clean chroot builds
	- drop buildfix patch
	- rework deps for clean builds
	- remove some obsolete configure options
	- Enhance user painting capabilities during slideshow --enable-presenter-extra-ui

2010-08-12 Andreas Radke <andyrtr at archlinux.org>

        * 3.3.0-OOO330_m4-1 :
	- new snapshot

2010-08-08 Andreas Radke <andyrtr at archlinux.org>

        * 3.3.0-OOO330_m3-1 :
	- new snapshot, should be 3.3 beta 1

2010-07-31 Andreas Radke <andyrtr at archlinux.org>

        * 3.3.0-OOO330_m2-1 :
	- new snapshot
	- drop patch for system libmythes
	- add patch for http://www.openoffice.org/issues/show_bug.cgi?id=113563
	
2010-07-17 Andreas Radke <andyrtr at archlinux.org>

        * 3.3.0-OOO330_m1-1 :
	- 3.3.0 series branched from DEV300_m84
	- adopt all changes that went into the devel pkg
	- disable PYTHONPATH changes in profile file
	- add patch to build with system libmythes

2010-05-29 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.1-OOO320_m19-1 :
	- new snapshot = 3.2.1 RC3

2010-05-23 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.1-OOO320_m18-1 :
	- new snapshot = 3.2.1 RC2
	- rework optional dependencies to drop some hardeps, #19445
	- rechecked core deps when optional deps are not present
	- use system libmythes