@@ -4,8 +4,8 @@
 
 pkgbase="openoffice-base-beta"
 pkgname=('openoffice-base-beta' 'openoffice-sdk-beta')
-_OO_milestone=OOO330_m12
-pkgver=3.3.0_${_OO_milestone/OOO/ooo} # m13 = RC2
+_OO_milestone=OOO330_m13
+pkgver=3.3.0_${_OO_milestone/OOO/ooo} # m13 = RC3
 pkgrel=1
 arch=('i686' 'x86_64')
 license=('LGPL3')
@@ -104,12 +104,12 @@ source=(${_OO_milestone}.tar.xz
 	${_additional_source_url}/fca8706f2c4619e2fa3f8f42f8fc1e9d-rasqal-0.9.16.tar.gz
 	${_additional_source_url}/fcc6df1160753d0b8c835d17fdeeb0a7-boost_1_39_0.tar.gz
 	${_additional_source_url}/fdb27bfe2dbe2e7b57ae194d9bf36bab-SampleICC-1.3.2.tar.gz
-	${_additional_source_url}/fe5b3e2b7c4577f30dc001054365653e-dejavu-fonts-ttf-2.30.zip
+	${_additional_source_url}/37282537d0ed1a087b1c8f050dc812d9-dejavu-fonts-ttf-2.32.zip
 	${_additional_source_url}/831126a1ee5af269923cfab6050769fe-mysql-connector-cpp.zip
 	${_additional_source_url}/067201ea8b126597670b5eff72e1f66c-mythes-1.2.0.tar.gz
 	${_additional_source_url}/cf8a6967f7de535ae257fa411c98eb88-mdds_0.3.0.tar.bz2)
 options=('!distcc' '!ccache' '!makeflags')
-md5sums=('89970d30a11c5f819ac076283f0219d1'
+md5sums=('882c0c9dfc3174521af97ba5bbbcbe19'
          'e3a0b76dcd876f3d721ee7183729153d'
          'aa65d79fe9023e982835c77227ead2b0'
          '71f136a31e296a04ab68932a31dd533e'
@@ -192,7 +192,7 @@ md5sums=('89970d30a11c5f819ac076283f0219d1'
          'fca8706f2c4619e2fa3f8f42f8fc1e9d'
          'fcc6df1160753d0b8c835d17fdeeb0a7'
          'fdb27bfe2dbe2e7b57ae194d9bf36bab'
-         'fe5b3e2b7c4577f30dc001054365653e'
+         '37282537d0ed1a087b1c8f050dc812d9'
          '831126a1ee5af269923cfab6050769fe'
          '067201ea8b126597670b5eff72e1f66c'
          'cf8a6967f7de535ae257fa411c98eb88')
