@@ -1,3 +1,9 @@
+2010-10-29 Andreas Radke <andyrtr at archlinux.org>
+
+        * 3.3.0-OOO330_m13-1 :
+	- new snapshot; RC3
+	- update external source tree
+
 2010-10-23 Andreas Radke <andyrtr at archlinux.org>
 
         * 3.3.0-OOO330_m12-1 :
